WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300825
REGRESSION (
298785@main
): Safari Reader summary loading animation shows extra bold blocks
https://bugs.webkit.org/show_bug.cgi?id=300825
Summary
REGRESSION (298785@main): Safari Reader summary loading animation shows extra...
Tim Horton
Reported
2025-10-15 12:33:59 PDT
REGRESSION (
298785@main
): Safari Reader summary loading animation shows extra bold blocks
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2025-10-15 12:34:00 PDT
<
rdar://problem/161927824
>
Tim Horton
Comment 2
2025-10-15 12:37:08 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52413
EWS
Comment 3
2025-10-15 13:57:58 PDT
Committed
301580@main
(d15268d6278e): <
https://commits.webkit.org/301580@main
> Reviewed commits have been landed. Closing PR #52413 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug