REGRESSION (298785@main): Safari Reader summary loading animation shows extra bold blocks https://bugs.webkit.org/show_bug.cgi?id=300825 rdar://161927824

Reviewed by Wenson Hsieh.

* Source/WebCore/page/TextIndicator.cpp:
(WebCore::TextIndicator::createWithRange):
Normalize the selection and requested ranges using identical mechanisms, so that
we correctly compare sufficiently similar selections as equal.

Not doing so results in sometimes switching into "paint all content" mode instead
of "selection-only painting" mode, which results in pudgier lines of text in
the summary loading animation far downstream.

Canonical link: https://commits.webkit.org/301580@main